# modules/apps/data-engine/data-engine-rest-impl/src/main/java/com/liferay/data/engine/rest/internal/dto/v1_0/util/DataRecordValuesUtil.java
@@ -16,18 +16,16 @@ package com.liferay.data.engine.rest.internal.dto.v1_0.util;
 
 import com.liferay.data.engine.rest.dto.v1_0.DataDefinition;
 import com.liferay.data.engine.rest.dto.v1_0.DataDefinitionField;
-import com.liferay.petra.string.StringPool;
 import com.liferay.portal.kernel.json.JSONFactoryUtil;
 import com.liferay.portal.kernel.json.JSONObject;
 import com.liferay.portal.kernel.json.JSONUtil;
-import com.liferay.portal.kernel.util.GetterUtil;
 
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import java.util.stream.StreamSupport;
 
 /**
  * @author Jeyvison Nascimento
@@ -35,7 +33,7 @@ import java.util.stream.StreamSupport;
 public class DataRecordValuesUtil {
 
 	public static Map<String, Object> toDataRecordValues(
-			DataDefinition dataDefinition, String json)
+			DataDefinition dataDefinition, String json, List<String> fieldNames)
 		throws Exception {
 
 		Map<String, Object> dataRecordValues = new HashMap<>();
@@ -46,6 +44,11 @@ public class DataRecordValuesUtil {
 				dataDefinition.getDataDefinitionFields()) {
 
 			if (!jsonObject.has(dataDefinitionField.getName())) {
+				continue;
+			}
+			else if ((fieldNames != null) && (!fieldNames.isEmpty()) &&
+					 !fieldNames.contains(dataDefinitionField.getName())) {
+
 				continue;
 			}
 
@@ -79,14 +82,7 @@ public class DataRecordValuesUtil {
 
 			DataDefinitionField dataDefinitionField = entry.getValue();
 
-			if (dataDefinitionField.getLocalizable()) {
-				jsonObject.put(
-					entry.getKey(),
-					_toJSONObject(
-						(Map<String, Object>)dataRecordValues.get(
-							dataDefinitionField.getName())));
-			}
-			else if (dataDefinitionField.getRepeatable()) {
+			if (dataDefinitionField.getRepeatable()) {
 				jsonObject.put(
 					entry.getKey(),
 					JSONFactoryUtil.createJSONArray(
@@ -104,44 +100,12 @@ public class DataRecordValuesUtil {
 	private static Object _toDataRecordValue(
 		DataDefinitionField dataDefinitionField, JSONObject jsonObject) {
 
-		if (dataDefinitionField.getLocalizable()) {
-			Map<String, Object> localizedValues = new HashMap<>();
-
-			JSONObject dataRecordValueJSONObject = jsonObject.getJSONObject(
-				dataDefinitionField.getName());
-
-			Iterable<String> iterable = dataRecordValueJSONObject::keys;
-
-			StreamSupport.stream(
-				iterable.spliterator(), false
-			).forEach(
-				key -> localizedValues.put(
-					key, dataRecordValueJSONObject.get(key))
-			);
-
-			return localizedValues;
-		}
-
 		if (dataDefinitionField.getRepeatable()) {
 			return JSONUtil.toObjectArray(
 				jsonObject.getJSONArray(dataDefinitionField.getName()));
 		}
 
 		return jsonObject.get(dataDefinitionField.getName());
-	}
-
-	private static JSONObject _toJSONObject(
-		Map<String, Object> localizedValues) {
-
-		JSONObject jsonObject = JSONFactoryUtil.createJSONObject();
-
-		for (Map.Entry<String, Object> entry : localizedValues.entrySet()) {
-			jsonObject.put(
-				entry.getKey(),
-				GetterUtil.get(entry.getValue(), StringPool.BLANK));
-		}
-
-		return jsonObject;
 	}
 
 }
